# docs/swagger.json
@@ -14,7 +14,7 @@
     "paths": {
         "/members/": {
             "get": {
-                "description": "GetAllMembers handles request for Get Member by Id",
+                "description": "GetAllMembers handles request for Get Members",
                 "consumes": [
                     "application/json"
                 ],
@@ -80,6 +80,30 @@
                         "type": "string",
                         "description": "salaryEnd filter",
                         "name": "salaryEnd",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "category filter",
+                        "name": "category",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "level filter",
+                        "name": "level",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "orderBy order by",
+                        "name": "orderBy",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "orderType asc/desc",
+                        "name": "orderType",
                         "in": "query"
                     }
                 ],
@@ -390,6 +414,17 @@
                 }
             }
         },
+        "oracle_com_oracle_my-go-oracle-app_service_member.MemberDetail": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "type": "string"
+                },
+                "level": {
+                    "type": "string"
+                }
+            }
+        },
         "oracle_com_oracle_my-go-oracle-app_service_member.MemberInfo": {
             "type": "object",
             "properties": {
@@ -418,6 +453,9 @@
         "oracle_com_oracle_my-go-oracle-app_service_member.MemberResponse": {
             "type": "object",
             "properties": {
+                "detail": {
+                    "$ref": "#/definitions/oracle_com_oracle_my-go-oracle-app_service_member.MemberDetail"
+                },
                 "id": {
                     "type": "integer"
                 },
